--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #070707;
+    color: white;
+}
+
+.active{
+    border-bottom: 1px solid cyan;
+    border-top: 1px solid cyan;
+    color: bisque;
+    transition:  0.5s;
+}
+
+.brr{
+    border: 1px solid yellow;
+}
+.brb{
+    border: 1px solid cyan;
+}
