--- a/src/Components/Cards/card.css
+++ b/src/Components/Cards/card.css
@@ -7,3 +7,12 @@
     scale: 1.2;
     background-color: #000000af;
 }
+#discription{
+    transition: all 0.2s;
+    opacity: 0;
+    margin-top: -2.5rem;
+}
+.event-card:hover #discription{
+    opacity: 1;
+    margin-top: 0.5rem;
+}
